<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <com.v2ray.ang.ui.preference.FullSpanPreference
        android:layout="@layout/uwu_banner_settings"
        app:selectable="false" />
        
     <com.v2ray.ang.ui.preference.FullSpanPreference
        android:icon="@drawable/uwu_check"
        android:layout="@layout/uwu_maintainer"
        android:title="@string/uwu_maintainer_title"
        app:selectable="false"
        android:summary="@string/uwu_maintainer_summary" />

    <com.bytehamster.lib.preferencesearch.SearchPreference
        android:key="pref_search"
        app:textHint="@string/searchpreference_search"
        app:textNoResults="@string/searchpreference_no_results"
        app:textClearHistory="@string/searchpreference_clear_history"
        app:textClearInput="@string/searchpreference_clear"
        app:textMore="@string/searchpreference_more" />
        
    <Preference
        android:icon="@drawable/ic_toggle_switch"
        android:key="pref_navigate_vpn_settings"
        android:summary="@string/summary_navigate_vpn_settings"
        android:title="@string/title_vpn_settings"
        app:layout="@layout/uwu_grid" />

    <Preference
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:key="pref_navigate_ui_settings"
        android:summary="@string/summary_navigate_ui_settings"
        android:title="@string/title_ui_settings"
        app:layout="@layout/uwu_grid" />

    <Preference
        android:icon="@drawable/ic_router"
        android:key="pref_navigate_core_settings"
        android:summary="@string/summary_navigate_core_settings"
        android:title="@string/title_core_settings"
        app:layout="@layout/uwu_grid" />

    <Preference
        android:icon="@drawable/ic_numeric"
        android:key="pref_navigate_mux_settings"
        android:summary="@string/summary_navigate_mux_settings"
        android:title="@string/title_mux_settings"
        app:layout="@layout/uwu_grid" />

    <Preference
        android:icon="@drawable/ic_currency_eth"
        android:key="pref_navigate_fragment_settings"
        android:summary="@string/summary_navigate_fragment_settings"
        android:title="@string/title_fragment_settings"
        app:layout="@layout/uwu_grid" />

    <Preference
        android:icon="@drawable/ic_pencil"
        android:key="pref_navigate_advanced_settings"
        android:summary="@string/summary_navigate_advanced_settings"
        android:title="@string/title_advanced"
        app:layout="@layout/uwu_grid" />

</PreferenceScreen>
