<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_vpn_settings">

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_toggle_switch"
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_ipv6_enabled"
            android:summary="@string/summary_pref_ipv6_enabled"
            android:title="@string/title_pref_ipv6_enabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_domain"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_prefer_ipv6"
            android:summary="@string/summary_pref_prefer_ipv6"
            android:title="@string/title_pref_prefer_ipv6" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_dns"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_local_dns_enabled"
            android:summary="@string/summary_pref_local_dns_enabled"
            android:title="@string/title_pref_local_dns_enabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_dns"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_fake_dns_enabled"
            android:summary="@string/summary_pref_fake_dns_enabled"
            android:title="@string/title_pref_fake_dns_enabled" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_wan"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_append_http_proxy"
            android:summary="@string/summary_pref_append_http_proxy"
            android:title="@string/title_pref_append_http_proxy" />

        <EditTextPreference
            android:icon="@drawable/ic_dns"
            app:layout="@layout/uwu_mid"
            android:key="pref_vpn_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_vpn_dns" />

        <ListPreference
            android:icon="@drawable/ic_lan"
            app:layout="@layout/uwu_mid"
            android:defaultValue="1"
            android:entries="@array/vpn_bypass_lan"
            android:entryValues="@array/vpn_bypass_lan_value"
            android:key="pref_vpn_bypass_lan"
            android:summary="%s"
            android:title="@string/title_pref_vpn_bypass_lan" />

        <ListPreference
            android:icon="@drawable/ic_access_point_network"
            app:layout="@layout/uwu_mid"
            android:defaultValue="0"
            android:entries="@array/vpn_interface_address"
            android:entryValues="@array/vpn_interface_address_value"
            android:key="pref_vpn_interface_address_config_index"
            android:summary="%s"
            android:title="@string/title_pref_vpn_interface_address" />

        <EditTextPreference
            android:icon="@drawable/ic_key"
            app:layout="@layout/uwu_mid"
            android:inputType="number"
            android:key="pref_vpn_mtu"
            android:summary="1500"
            android:title="@string/title_pref_vpn_mtu" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_toggle_switch"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:defaultValue="true"
            android:key="pref_use_hev_tunnel_v2"
            android:summary="@string/summary_pref_use_hev_tunnel"
            android:title="@string/title_pref_use_hev_tunnel" />

        <ListPreference
            android:icon="@drawable/ic_math_log"
            app:layout="@layout/uwu_mid"
            android:defaultValue="warn"
            android:entries="@array/hev_tunnel_loglevel"
            android:entryValues="@array/hev_tunnel_loglevel"
            android:key="pref_hev_tunnel_loglevel"
            android:summary="%s"
            android:title="@string/title_pref_hev_tunnel_loglevel" />

        <EditTextPreference
            android:icon="@drawable/ic_clock"
            app:layout="@layout/uwu_bot"
            android:key="pref_hev_tunnel_rw_timeout_v2"
            android:summary="300,60"
            android:title="@string/title_pref_hev_tunnel_rw_timeout" />

    </PreferenceCategory>

</PreferenceScreen>
