<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_advanced">

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_connection"
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_is_booted"
            android:summary="@string/summary_pref_is_booted"
            android:title="@string/title_pref_is_booted" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_delete_24dp"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_auto_remove_invalid_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_remove_invalid_after_test"
            android:title="@string/title_pref_auto_remove_invalid_after_test" />

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_sort"
            app:layout="@layout/uwu_mid_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_auto_sort_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_sort_after_test"
            android:title="@string/title_pref_auto_sort_after_test" />

        <EditTextPreference
            android:icon="@drawable/ic_pencil"
            app:layout="@layout/uwu_mid"
            android:key="pref_delay_test_url"
            android:summary="@string/summary_pref_delay_test_url"
            android:title="@string/title_pref_delay_test_url" />

        <EditTextPreference
            android:icon="@drawable/ic_numeric"
            app:layout="@layout/uwu_mid"
            android:inputType="number"
            android:key="pref_real_ping_concurrency"
            android:summary="16"
            android:title="@string/title_pref_real_ping_concurrency" />

        <EditTextPreference
            android:icon="@drawable/ic_pencil"
            app:layout="@layout/uwu_mid"
            android:key="pref_ip_api_url"
            android:summary="@string/summary_pref_ip_api_url"
            android:title="@string/title_pref_ip_api_url" />

        <ListPreference
            android:icon="@drawable/ic_arrow_decision"
            app:layout="@layout/uwu_mid"
            android:defaultValue="AsIs"
            android:entries="@array/routing_domain_strategy"
            android:entryValues="@array/routing_domain_strategy"
            android:key="pref_routing_domain_strategy"
            android:summary="%s"
            android:title="@string/routing_settings_domain_strategy" />

        <ListPreference
            android:icon="@drawable/ic_key"
            app:layout="@layout/uwu_bot"
            android:defaultValue="VPN"
            android:entries="@array/mode_entries"
            android:entryValues="@array/mode_value"
            android:key="pref_mode"
            android:summary="%s"
            android:title="@string/title_mode" />

    </PreferenceCategory>

</PreferenceScreen>
